# Constituent-Treelib

./: .gitignore  CITATION.cff  Constituent_TreeLib_Quickstart.ipynb  LICENSE  README.md  ctl_app.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
constituent_treelib/: __init__.py  core.py  errors.py  export.py
constituent_treelib/lang_models/: __init__.py
tests/: test_ctl_core.py
