[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "constituent_treelib"
version = "0.0.6"
authors = [
  { name="Oren Halvani" }
]
description = "A lightweight Python library for constructing, processing, and visualizing constituent trees."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "benepar==0.2.0",
	"contractions",
	"fasttext",
	"nltk",
	"pytest",
	"streamlit",
	"svgling",
	"ipython",
	"torch==1.9.0+cu111",
	"tokenizers==0.9.4",
    "huspacy",	
    "nltk==3.7",
    "pdfkit==1.0.0",
    "spacy==3.4.1",	
    "Wand==0.6.10",
    "tokenizers==0.9.4",
    "transformers[torch]==4.2.2",
    "protobuf==3.20.3"
]
keywords = [
    "constituency-tree",
    "constituency-parser",
	"phrase-extraction",
    "visualization",
	"export-to-pdf",
	"export-to-svg",
	"export-to-png"
]

[project.urls]
"Homepage" = "https://github.com/Halvani/constituent-treelib"
"Bug Tracker" = "https://github.com/Halvani/constituent-treelib/issues"