[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "constituent_treelib"
version = "0.0.7"
authors = [
  { name="Oren Halvani" }
]
description = "A lightweight Python library for constructing, processing, and visualizing constituent trees."
readme = "README.md"
requires-python = ">=3.6"

classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent", 
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12"
]

dependencies = [
    "benepar",
	"contractions",
	"langid",
	"nltk",
	"pytest",
	"streamlit",
	"svgling",
	"ipython",
	"torch",
	"tokenizers",
    "huspacy",	
    "nltk",
    "pdfkit",
    "spacy",	
    "Wand",
    "tokenizers",
    "transformers[torch]",
    "protobuf==3.20.3"
]
keywords = [
    "constituency-tree",
    "constituency-parser",
	"phrase-extraction",
    "visualization",
	"export-to-pdf",
	"export-to-svg",
	"export-to-png"
]

[project.urls]
"Homepage" = "https://github.com/Halvani/constituent-treelib"
"Bug Tracker" = "https://github.com/Halvani/constituent-treelib/issues"